fusefs: fix some bugs updating atime during close

When using cached attributes, we must update a file's atime during
close, if it has been read since the last attribute refresh.  But,

* Don't update atime if we lack write permissions to the file or if the
  file system is readonly.
* If the daemon fails our atime update request for any reason, don't
  report this as a failure for VOP_CLOSE.

PR:		270749
Reported by:	Jamie Landeg-Jones <jamie@catflap.org>
Sponsored by:	Axcient
Reviewed by:	pfg
Approved by:	re (gjb)
Differential Revision: https://reviews.freebsd.org/D41925

(cherry picked from commit fb619c94c679e939496fe0cf94b8d2cba95e6e63)

fusefs: fix unused variables from fb619c94c67

PR:		270749
Reported by:	cy
Sponsored by:	Axcient
Approved by:	re (gjb)

(cherry picked from commit e5236d25f2c0709acf3547e6af45f4bb4eec4f02)
(cherry picked from commit 13f188ce0b51908c292cdbb85ef26962528af87b)